@@ -4078,4 +4078,10 @@ backtracking verbs. --/
 
 /\x{whatever}/
 
+"((?=(?(?=(?(?=(?(?=())))*)))))"
+    a
+
+"(?(?=)?==)(((((((((?=)))))))))"
+    a
+
 /-- End of testinput2 --/
